--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,5 @@ jobs:
       run: ./gradlew build
     - name: Run tests with Gradle
       run: ./gradlew test
+    - name: Run checkstyle
+      run: ./gradlew checkstyleMain checkstyleTest
