Fix path syntax for Gradle build command on Windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,4 @@ jobs:
 
       - name: Build with Gradle (Windows)
         if: runner.os == 'Windows'
-        run: gradlew.bat --no-daemon build
+        run: .\gradlew.bat --no-daemon build
